# KivyChatApp

./: main.py  pyproject.toml  test_gui.py
kivy_mobile_chat/: __init__.py  log_engine.py
kivy_mobile_chat/components/: __init__.py
kivy_mobile_chat/components/chat/: __init__.py  client.py  message.py
kivy_mobile_chat/components/chat/server/: __init__.py
kivy_mobile_chat/components/chat/server/helpers/: __init__.py  decorators.py
kivy_mobile_chat/components/ui/: __init__.py  app.py  layout.py
kivy_mobile_chat/components/ui/alt/: __init__.py
kivy_mobile_chat/components/ui/panels/: __init__.py  user_connection.py
kivy_mobile_chat/config/: __init__.py  servers.py
