[tool.poetry]
name = "kivy_mobile_chat"
version = "1.0.0-dev1"
description = "A mobile chat app"
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kivy = {extras = ["full"], version = "^2.3.0"}
inspy-logger = "^3.2.0"
inspyre-toolbox = ">=1.6.0.dev13"


[tool.poetry.group.dev.dependencies]
buildozer = "^1.5.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"
ipython = "^8.28.0"
prompt-toolkit = "^3.0.48"
ptipython = "^1.0.1"
ipyboost = { path = "./ipyboost-1.0.0a3-py3-none-any.whl" }
pysimplegui = "^5.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
